add inheritance to reworked class structure